== 0.7.0 Spherical Cow release
 * Wrap application in a Rack::CommonLogger adapter in debug mode.
 * --debug (-D) option no longer set $DEBUG so logging will be less verbose
   and Ruby won't be too strict, fixes #36.
 * Deprecate Server#silent in favor of Logging.silent.
 * Persistent connection (keep-alive) & HTTP pipelining support.
 * Fix -s option not being included in generated config file, fixes #37.
 * Add Swiftiply support. Use w/ the --swiftiply (-y) option in the thin script,
   closes #28 [Alex MacCaw]

== 0.6.4 Sexy Lobster release
 * Fix error when stopping server on UNIX domain socket, fixes #42
 * Rescue errors in Connection#get_peername more gracefully, setting REMOTE_ADDR to nil, fixes #43

== 0.6.3 Ninja Cookie release
 * Add tasks for Vlad the Deployer in example/vlad.rake [cnantais]
 * Add Ramaze Rackup config file in example dir [tmm1]
   Use like this from you Ramaze app dir:
   
     thin start -r /path/to/thin/example/ramaze.ru
   
 * Add the --rackup option to load a Rack config file instead of the Rails adapter.
   So you can use any framework with the thin script and start cluster and stuff like that.
   A Rack config file is one that is usable through the rackup command and looks like this:
     
     use Rack::CommonLogger
     run MyCrazyRackAdapter.new(:uterly, 'cool')
     
   Then use it with thin like this:
     
     thin start --rackup config.ru
     
 * thin config --chrdir ... -C thin/yml do not change current directory anymore, fixes #33.
 * Add a better sample god config file in example/thin.god that loads all info from config
   files in /etc/thin. Drop-in replacement for the thin runlevel service [Gump].
 * Add support for specifying a custom Connector to the server and add more doc about Server
   configuration.
 * Add a script to run thin as a runlevel service that can start at startup, closes #31 [Gump]
   Setup the service like this:
   
     sudo thin install /etc/thin
   